--- a/src/ResuableComponent/FilterDropdown/FilterDropdown.scss
+++ b/src/ResuableComponent/FilterDropdown/FilterDropdown.scss
@@ -4,13 +4,13 @@
 }
 
 .dropdown-button {
-    background-color: #1976d2;
+    background-color: #0275BE;
     color: #fff;
     padding: 8px 16px;
     border: none;
-    border-radius: 4px;
+    border-radius: 12px 12px 0px 0px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 18px;
     text-align: center;
 }
 
@@ -19,7 +19,7 @@
     top: 100%;
     right: 0px;
     min-width: 250px;
-    margin-top: 8px;
+    margin-top: 8px ;
     padding: 8px 0;
     background-color: #fff;
     border-radius: 8px;
@@ -45,7 +45,8 @@
     }
 
     .filter-dropdown-item.selected {
-        font-weight: bold;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: 600;
     }
 
 }
