--- a/src/ResuableComponent/AvatarDropDown/AvatarDropDown.scss
+++ b/src/ResuableComponent/AvatarDropDown/AvatarDropDown.scss
@@ -1,3 +1,5 @@
+@import '../../assests/scss/global.scss';
+
 .custom-dropdown-menu {
     right: 0 !important;
     /* Moves the dropdown menu to the left side */
@@ -5,24 +7,30 @@
     padding: 0px !important;
     margin: 0px !important;
 
+    border-radius: 24px !important;
+    border: none !important;
+    box-shadow: 0px 0px 8px 0px #000000 !important;
+
     .avatar-drop-down-item {
         padding: 19px;
-        font-family: sans-serif;
-        font-weight: 500;
-        font-size: 21px;
+
         cursor: pointer;
         margin: 0px;
 
+        @include popins-medium;
+        font-size: 20px;
+
         .avatar-drop-down-icon {
             svg {
-                width: 24px !important;
-                height: 24px !important;
+                width: 20 !important;
+                height: 20 !important;
             }
         }
 
         &:hover {
             background: #e2d3d3;
             color: #0275be;
+            border-radius: 0px;
         }
     }
 
@@ -30,11 +38,18 @@
         border-bottom: 1px solid #ccc;
     }
 
+    .avatar-drop-down-item:first-child {
+        &:hover {
+            border-radius: 24px 24px 0px 0px;
+        }
+    }
+
     .avatar-drop-down-item:last-child {
         color: #b3200d;
 
-        &:hover{
+        &:hover {
             color: #fff;
+            border-radius: 0px 0px 24px 24px;
             background: #d2230cf5;
         }
     }
