--- a/src/ResuableComponent/Card/Card.scss
+++ b/src/ResuableComponent/Card/Card.scss
@@ -1,8 +1,10 @@
+@import '../../assests/scss/global.scss';
+
 .percentile-card {
-    border-radius: 8px;
+    border-radius: 14px;
     height: 100%;
     box-shadow: 0px 0px 14px  2px #bcb6b1;
-    max-width: 300px;
+    max-width: 350px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -14,11 +16,21 @@
             height: 80%;
             font-size: 2rem;
             font-weight: bold;
+
+            color: #333333;
+            @include popins-regular;
+            font-size: 59px;
         }
 
         .percentile-text {
             font-size: 0.8rem;
-            color: #6a6969
+            color: #939393;
+
+            @include popins-regular;
+            font-size: 21px;
+
+            margin-left: -12px;
+            margin-top: 17px;
         }
     }
 
@@ -27,6 +39,6 @@
         height: 20%;
         font-size: 1rem;
         color: #fff;
-        border-radius: 0px 0px 8px 8px;
+        border-radius: 0px 0px 14px 14px;
     }
 }
