--- a/src/ResuableComponent/NestedColTable/NestedColTable.scss
+++ b/src/ResuableComponent/NestedColTable/NestedColTable.scss
@@ -1,3 +1,5 @@
+@import '../../assests/scss/global.scss';
+
 .table-container {
   overflow: scroll;
   width: 100%;
@@ -38,12 +40,12 @@
         border-right: 1px solid rgb(204, 204, 204);
         padding: 20px;
 
-        font-family: "Poppins";
-        font-size: 28px;
-        font-weight: 500;
         font-style: normal;
         text-align: left;
         color: #979797;
+        
+        font-size: 30px;
+        @include popins-medium;
 
         &:last-child {
           border-right: none;
@@ -60,12 +62,12 @@
         border-right: 1px solid rgb(204, 204, 204);
         padding: 20px;
 
-        font-family: "Poppins";
-        font-size: 18px;
-        font-weight: 500;
         font-style: normal;
         text-align: left;
         color: #333333;
+
+        @include popins-medium;
+        font-size: 24px;
 
         &:last-child {
           border-right: none;
