--- a/src/ResuableComponent/Tab/Tab.scss
+++ b/src/ResuableComponent/Tab/Tab.scss
@@ -1,12 +1,16 @@
+.navbar-container {
+    background-color: #0275BE;
+}
+
 .nav-link {
     color: #fff !important;
     position: relative;
     padding-bottom: 5px;
     cursor: pointer;
 
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+    font-size: 24px !important;
 
-    font-size: 24px;
     font-weight: normal;
     font-style: normal;
     text-align: left;
@@ -15,6 +19,7 @@
 
 .nav-link.active {
     border-bottom: 3px solid #fff;
+    font-weight: 600 !important;
 }
 
 .navbar-nav {
@@ -28,7 +33,7 @@
     flex-direction: column !important;
     width: 100%;
 
-    @media(min-width: 992px){
+    @media(min-width: 992px) {
         gap: 64px;
         flex-direction: row !important;
         align-items: center;
@@ -47,6 +52,9 @@
     border-radius: 10px 10px 0px 0px !important;
     cursor: pointer;
 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
+    font-size: 20px !important;
+
     svg {
         width: 24px;
         height: 24px;
@@ -54,6 +62,7 @@
 
     &:active {
         border-radius: 0px !important;
+        font-weight: 600 !important;
     }
 }
 
@@ -62,6 +71,8 @@
     color: #fff;
     border-bottom: 3px solid #fff;
     border-radius: 0px !important;
+    font-weight: 600 !important;
+    background-color: #0275BE !important;
 }
 
 .dropdown-menu {
