--- a/src/ResuableComponent/ToggleButton/ToggleButton.scss
+++ b/src/ResuableComponent/ToggleButton/ToggleButton.scss
@@ -2,24 +2,25 @@
   display: flex;
   border-radius: 31px;
   overflow: hidden;
-  border: 1px solid #0275be;
+  border: 1px solid #0275BE;
 
   button {
     flex: 1;
     padding: 10px 20px;
     font-weight: bold;
-    color: #0070c0;
+    color: #0275BE;
     background-color: white;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
 
-    font-family: "Segoe UI";
     font-size: 18px;
-    font-weight: normal;
     font-style: normal;
     text-align: left;
     white-space: nowrap;
+    
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 600;
 
     &:focus {
       outline: none;
@@ -27,7 +28,7 @@
 
     &.active {
       color: #ffffff;
-      background-color: #0275be;
+      background-color: #0275BE;
     }
   }
 }
