--- a/src/components/MockJossaForn/MockJossaForm.scss
+++ b/src/components/MockJossaForn/MockJossaForm.scss
@@ -34,13 +34,13 @@ $header-bg-image: url('https://t3.ftcdn.net/jpg/02/90/89/76/360_F_290897614_7RdA
 
             margin-top: 10px;
 
-            @include popins-regular;
-            font-size: 50px;
+            @include popins-semibold;
+            font-size: 34px;
         }
 
         .title-desc {
             @include popins-regular;
-            font-size: 28px;
+            font-size: 22px;
         }
 
         .share-svg {
