--- a/src/components/JossaHelp/Jossahelp.scss
+++ b/src/components/JossaHelp/Jossahelp.scss
@@ -29,6 +29,7 @@ $header-bg-image: url('../../assests/images/JosaaForm1.png');
 }
 
 .jossa-help {
+    overflow: scroll;
     font-family: Arial, sans-serif;
     padding: 20px;
     margin: 0px;
@@ -54,7 +55,7 @@ $header-bg-image: url('../../assests/images/JosaaForm1.png');
         h2 {
             font-style: normal;
             color: #ffffff;
-            
+
             font-size: 50px;
             @include popins-regular
         }
@@ -77,11 +78,11 @@ $header-bg-image: url('../../assests/images/JosaaForm1.png');
             @include popins-regular;
         }
 
-        .top-left{
+        .top-left {
             opacity: 0.7;
         }
 
-        .bottom-right-svg{
+        .bottom-right-svg {
             top: auto;
             bottom: 5%;
             right: 10%;
@@ -103,12 +104,12 @@ $header-bg-image: url('../../assests/images/JosaaForm1.png');
         gap: 22px;
         padding: 0px 2rem;
 
-        @media(min-width: 992px){
+        @media(min-width: 992px) {
             padding: 0px
         }
 
         h3 {
-           
+
             font-style: normal;
             color: #333333;
 
@@ -127,20 +128,20 @@ $header-bg-image: url('../../assests/images/JosaaForm1.png');
                 max-width: 650px;
                 box-shadow: $card-shadow;
                 border: 1px solid #a1a0a0;
-                transform: translateX(100%);
-                animation: slideInRight 0.5s ease forwards;
+                // transform: translateX(100%);
+                // animation: slideInRight 0.5s ease forwards;
 
                 &.slide-in {
-                    animation: slideInRight 0.5s ease forwards;
+                    // animation: slideInRight 0.5s ease forwards;
                 }
 
-                &.shrink {
-                    top: -22px;
-                    zoom: 0.9;
-                    background: #a4efea;
-                    margin-top: -15px;
-                    animation: shrink 0.3s ease forwards;
-                }
+                // &.shrink {
+                //     top: -22px;
+                //     zoom: 0.9;
+                //     background: #a4efea;
+                //     margin-top: -15px;
+                //     // animation: shrink 0.3s ease forwards;
+                // }
 
                 .help-card-header {
                     padding: 20px;
@@ -148,7 +149,7 @@ $header-bg-image: url('../../assests/images/JosaaForm1.png');
                     h4 {
                         font-style: normal;
                         color: #ffffff;
-                        
+
                         font-size: 40px;
                         @include popins-medium;
                     }
@@ -162,7 +163,7 @@ $header-bg-image: url('../../assests/images/JosaaForm1.png');
                         font-style: normal;
                         text-align: center;
                         color: #fafafa;
-                        
+
                         font-size: 24px;
                         @include popins-regular;
                     }
@@ -173,8 +174,133 @@ $header-bg-image: url('../../assests/images/JosaaForm1.png');
                         height: 260px;
                         border-radius: 0px 0px 24px 24px;
                     }
+
+                    img {
+                        margin-top: 15px;
+                        width: 100%;
+                        height: 300px;
+                        border-radius: 0px 0px 24px 24px;
+                    }
                 }
             }
         }
+    }
+}
+
+.help-card-container {
+    position: relative;
+    margin-top: 50px;
+    height: 750px;
+
+    .help-card {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%) translateY(100px); // Initial position (below view)
+        opacity: 0;
+        transition: all 0.8s ease;
+        border: 1px solid #ddd;
+        background: #fff;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+        border-radius: 10px;
+
+        background-color: $bg-color;
+        border-radius: 24px;
+        max-width: 650px;
+        box-shadow: $card-shadow;
+        border: 1px solid #a1a0a0;
+
+        &.show {
+            transform: translateX(-50%) translateY(0); // Final position
+            opacity: 1;
+        }
+
+        &+.help-card {
+            top: 20px; // Adjust to create the overlap
+        }
+    }
+
+    .shrink {
+        opacity: 0.6;
+        zoom: 0.9;
+        background-color: #57c6bf;
+    }
+
+    .card1-design {
+        top: 0px;
+    }
+
+    .card2-design {
+        top: 20px;
+    }
+
+    .card3-design {
+        top: 20px;
+    }
+
+    .card4-design {
+        top: 20px;
+    }
+}
+
+.why-choose-us-steps {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    h3 {
+
+        font-style: normal;
+        color: #333333;
+
+        font-size: 40px;
+        @include popins-medium;
+    }
+
+    .choose-us-body {
+
+        max-width: 58% !important;
+        margin-left: 8rem;
+        gap: 5rem;
+
+        .steps-wrapper {
+            width: 40%;
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+
+            .steps-title {
+                color: #0275BE;
+                font-size: 60px;
+                @include popins-medium
+            }
+
+            .steps-subtitle {
+                font-size: 27px;
+                @include popins-regular
+            }
+
+            .steps-para {
+                text-align: center;
+                font-size: 12px;
+                @include popins-regular
+            }
+        }
+    }
+}
+
+.Illustration-container {
+    align-items: center;
+    justify-content: center;
+    gap: 6rem;
+
+    .get-ready-title-text {
+        font-size: 38px;
+        @include popins-medium
+    }
+
+    .get-ready-body-text {
+        font-size: 17px;
+        color: #333333;
+        @include popins-regular
     }
 }
