--- a/src/ResuableComponent/ScheduleTable/ScheduledTable.scss
+++ b/src/ResuableComponent/ScheduleTable/ScheduledTable.scss
@@ -35,37 +35,60 @@
   }
 }
 
-.pagination-controls{
+.pagination-controls {
   padding: 1rem;
-  // box-shadow: 0px 0px 10px 3px #CCC;
   height: 0%;
   width: 100%;
-  /* background: pink; */
   margin-bottom: 3rem;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 2rem;
 }
 
-.prev-btn{
-  padding: 20px 30px;
-  border: 1px solid #0275BE;
-  border-radius: 20px;
-  font-size: 24px;
-  background-color: #0275BE;
-  color: #fff;
+.prev-btn {
+  color: rgba(27, 30, 33, 0.78);
+  font-family: "DM Sans";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border: none;
+  background: #fff;
+
 }
 
-.next-btn{
-  padding: 20px 30px;
-  border: 1px solid #0275BE;
-  border-radius: 20px;
-  font-size: 24px;
-  background-color: #0275BE;
-  color: #fff;
+.next-btn {
+  color: rgba(27, 30, 33, 0.78);
+  font-family: "DM Sans";
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border: none;
+  background: #fff;
+
 }
 
-.disbale-pagination-btn{
-  opacity: 0.5;
+.page-btn {
+  color: rgba(27, 30, 33, 0.78);
+  font-family: "DM Sans";
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  cursor: pointer;
+}
+
+.active-page {
+  font-weight: 700;
+}
+
+.disable-pagination-btn {
   cursor: not-allowed;
+  opacity: 0.5;
+}
+
+.generic-table {
+  height: 500px
 }
